# openai-image-telegram-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  keyboards.py  main.py  presets.py
app/db/: __init__.py  database.py  repository.py
app/db/migrations/: 001_init.sql  002_user_settings.sql
app/handlers/: __init__.py  commands.py  generate.py  settings.py
app/middlewares/: __init__.py  access.py  db_session.py
app/services/: __init__.py  image_processing.py  openai_image.py
tests/: test_config.py  test_image_processing.py  test_presets.py
